--- a/Plugins/DiscordIntegration/DiscordIntegration.uplugin
+++ b/Plugins/DiscordIntegration/DiscordIntegration.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name": "DiscordIntegration",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
