Cleaned some code up

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7D2E9F894543036D86373F9FC77A55E5
 ProjectName=Third Person Game Template
+Description=dddd
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/DiscordIntegration.DiscordSettings]
+ClientId=623063443515375616
+
